# Anthropilot_ROS

./: .gitignore  CLAUDE.md  README.md
src/Room/: model.sdf
src/map/: .yaml
src/map/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/map/log/: latest_build
src/map1/: .pgm  .yaml
src/map2/: .yaml
src/rviz_settings/: rviz.rviz
src/trial_1/: CMakeLists.txt  README_TELEOP_RECOVERY.md  nav2_params_snippet.yaml  package.xml  plugin_description.xml  setup.cfg  setup.py
src/trial_1/config/: nav2_params.yaml
src/trial_1/include/trial_1/: spin_recovery.hpp
src/trial_1/launch/: full_navigation.launch.py  my_custom_world.launch.py  nav2_navigation.launch.py  nav2_with_recovery.launch.py  slam_toolbox.launch.py  teleop_keyboard.launch.py  teleop_recovery.launch.py  teleop_starter.sh
src/trial_1/map/: map.pgm  map.yaml
src/trial_1/rviz/: nav2_waffle_pi.rviz
src/trial_1/src/: spin_recovery.cpp
src/trial_1/trial_1/: package.xml  teleop_keyboard_recovery.py
src/trial_1/trial_1/launch/: nav2_with_recovery.launch.py  teleop_recovery.launch.py
src/trial_1/trial_1/trial_1/: __init__.py  teleop_recovery_node.py  teleop_trigger.py
src/trial_1/urdf/: tb3_waffle_pi.urdf
src/trial_1/worlds/: my_custom_world.world  world2.world  world3.world
src/trial_1/worlds/world3/: model.config  model.sdf
